# gristmill

./: .gitignore  .gitmodules  CITATION.cff  CMakeLists.txt  MANIFAST.in  MANIFEST.in  README.md  juliapkg.json  pyproject.toml  setup.py
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  copilot-setup-steps.yml
docs/: intro.rst
gristmill/: __init__.py  generate.py  optimize.py  utils.py
gristmill/templates/: ein_str.jinja  einsum.j2  einsum.jinja  omeinsum_nocopy.jinja
tests/: opt_cc_test.py  printers_test.py
