[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gristmill"
version = "0.9.0"
description = "A package for automatic optimization and code generation of tensor computations"
requires-python = ">=3.12"
dependencies = [
  "drudge @ git+https://github.com/DrudgeCAS/drudge.git@pep621",
  "jinja2",
  "sympy>=1.7",
  "numpy",
  "networkx>=2.0"
]
classifiers = [
  'Development Status :: 1 - Planning',
  'Intended Audience :: Developers',
  'Intended Audience :: Science/Research',
  'License :: OSI Approved :: MIT License',
  'Programming Language :: Python :: 3 :: Only',
  'Topic :: Scientific/Engineering :: Mathematics'
]
readme = "README.rst"
license = {text = "MIT"}
authors = [
  { name = "Jinmo Zhao", email = "tschijnmotschau@gmail.com" },
  { name = "Gustavo E. Scuseria" }
]

[project.optional-dependencies]
docs = ["sphinx"]
dev = ["pytest"]

[project.urls]
Homepage = "https://github.com/DrudgeCAS/gristmill"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
gristmill = ["templates/*"]
