[build-system]
requires = ["scikit-build-core>=0.10"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
cmake.minimum-version = "3.15"  # Minimum version of CMake
cmake.verbose = true  # Verbose build for debugging
# Don't create a separate subdirectory - install alongside Python source files
wheel.packages = ["gristmill"]
sdist.include = ["gristmill/templates/*", "deps/cpypp/include/**/*.hpp", "deps/fbitset/include/**/*.hpp", "deps/libparenth/include/**/*.hpp"]

[project]
name = "gristmill"
version = "0.9.0"
description = "A tensor contraction optimizer and code generator based on Drudge"
requires-python = ">=3.12"
dependencies = [
  "drudge @ git+https://github.com/DrudgeCAS/drudge.git@master",
  "jinja2",
  "sympy>=1.14",
  "numpy",
  "networkx>=2.0",
  "ipython>=9.0",
  "ipykernel>=7.1.0"
]
classifiers = [
  'Development Status :: 4 - Beta',
  'Intended Audience :: Developers',
  'Intended Audience :: Science/Research',
  'Programming Language :: Python :: 3 :: Only',
  'Topic :: Scientific/Engineering :: Mathematics'
]
readme = "README.md"
license = {text = "MIT"}
authors = [
  { name = "Jinmo Zhao", email = "tschijnmotschau@gmail.com" },
  { name = "Gustavo E. Scuseria" }
]
maintainers = [
  { name = "Guo P. Chen" },
  { name = "Gaurav Harsha" }
]

[project.optional-dependencies]
docs = ["sphinx"]
dev = ["pytest", "juliacall>=0.9.20"]

[project.urls]
Homepage = "https://github.com/DrudgeCAS/gristmill"
